[project]
name = "quantative-finance-platform"
version = "0.1.0"
description = "Just made for a personal project might do something in future"
requires-python = ">=3.11"
dependencies = [
    "alpha-vantage>=3.0.0",
    "arch>=7.2.0",
    "joblib>=1.5.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "streamlit>=1.48.0",
    "tensorflow>=2.14.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "xgboost>=3.0.3",
    "yfinance>=0.2.65",
]
